[gd_scene load_steps=7 format=3 uid="uid://e83skcgv5b7o"]

[ext_resource type="FontFile" uid="uid://uktnn00c0smu" path="res://Assets/previous project assest/fonts/PixelOperator8.ttf" id="1_byi74"]
[ext_resource type="Script" uid="uid://dwyf54uef035" path="res://Scripts/end_screen.gd" id="1_io8vi"]

[sub_resource type="Theme" id="Theme_4jx4p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyn1p"]
bg_color = Color(0.672412, 0.688306, 0.576882, 1)

[sub_resource type="Theme" id="Theme_io8vi"]
default_font = ExtResource("1_byi74")
default_font_size = 30

[sub_resource type="Theme" id="Theme_e6myc"]
default_font = ExtResource("1_byi74")
default_font_size = 30

[node name="EndScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_io8vi")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4jx4p")
theme_override_styles/panel = SubResource("StyleBoxFlat_dyn1p")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -45.0
offset_right = 95.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = SubResource("Theme_io8vi")
text = "Main Menu"
alignment = 0

[node name="LeaderBoardButton" type="Button" parent="Panel/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = SubResource("Theme_e6myc")
text = "Leader Board"
alignment = 0

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_byi74")
theme_override_font_sizes/font_size = 30
text = "Score: 0"
